# libmonitor

./: .gitignore  Makefile.am  README.md  TODO  configure.ac  libmonitor.sln
cl-libmonitor/: cl-libmonitor.asd
cl-libmonitor/src/: cl-libmonitor.lisp  package.lisp
libmonitor/: Makefile.am  libmonitor.def  libmonitor.h  libmonitor.vcxproj  libmonitor.vcxproj.filters  libmonitor_pthreads.c  libmonitor_win32.c
libmonitorxx/: Makefile.am  libmonitor.cpp  libmonitor.hpp  libmonitorxx.vcxproj  libmonitorxx.vcxproj.filters
libmonitorxx_test/: Makefile.am  libmonitorxx_test.cpp  libmonitorxx_test.vcxproj  libmonitorxx_test.vcxproj.filters
